--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@openzeppelin/contracts",
+  "name": "@gusoku/openzeppelin-contracts",
   "description": "Secure Smart Contract library for Solidity",
-  "version": "3.4.0",
+  "version": "3.4.0-solc-0.8",
   "files": [
     "**/*.sol",
     "/build/contracts/*.json",
