--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "openzeppelin-solidity",
+  "name": "@gusoku/openzeppelin-solidity",
   "description": "Secure Smart Contract library for Solidity",
-  "version": "3.4.0",
+  "version": "3.4.0-solc-0.8",
   "files": [
     "/contracts/**/*.sol",
     "/build/contracts/*.json",
